# mcpx

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.json  coverage.json  mcpx.spec  pyproject.toml
.context/: final-test-results.txt  pr-description.md
.github/workflows/: release.yml
docs/: dashboard-improvement.md  requirements.md  roadmap.md  verification.md
docs/plans/: 2026-01-25-api-redesign.md  2026-01-25-proxyprovider-refactor.md
docs/requirements/: 2026-01-24_core_features_requirements.md  2026-01-24_core_features_verification.md  2026-01-24_docker_requirements.md  2026-01-24_docker_verification.md  2026-01-25_mcp_resource_requirements.md  2026-01-25_mcp_resource_verification.md  2026-01-25_proxyprovider_refactor_requirements.md  2026-01-25_proxyprovider_refactor_verification.md  2026-01-25_schema_compression_requirements.md  2026-01-25_schema_compression_verification.md  2026-01-25_toon_multimodal_requirements.md  2026-01-25_toon_multimodal_verification.md  README.md
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  index.css
scripts/: MCPX.icns  build_macos_app.py
src/mcpx/: __init__.py  __main__.py  compression.py  config.py  config_manager.py  content.py  description.py  desktop_app.py  errors.py  executor.py  health.py  pool.py  port_utils.py  registry.py  (+2 more)
tests/: __init__.py  test_api_redesign.py  test_compression.py  test_content.py  test_coverage.py  test_coverage2.py  test_e2e.py  test_health.py  test_mcpx.py  test_port_utils.py  test_schema_ts.py  test_web_api.py
(+31 files in other folders)
